fix content on mobile

--- a/assets/src/scss/6-elements/guide/_offcanvas.scss
+++ b/assets/src/scss/6-elements/guide/_offcanvas.scss
@@ -10,8 +10,7 @@
     -o-transition: all .25s ease-out;
     transition: all .25s ease-out;
   }
-
-  .row-offcanvas,
+  
   .sidenav-offcanvas {
     left: -50vw; /* 6 columns */
   }
